Correct Minor CSS alignments and styling In App.css

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,9 +1,6 @@
 #root {
   max-width: 1440px;
   margin: 0 auto;
-  padding: 32px 40px 24px;
-  text-align: center;
-  
 }
 
 .app{
